--- a/4-Flask/06-number_game/templates/index.html
+++ b/4-Flask/06-number_game/templates/index.html
@@ -12,8 +12,9 @@
             p{
                 text-align: center;
             }
-            input{
-                margin-left: 90px;
+            button{
+                display: block;
+                margin: auto;
             }
             button{
                 margin-left: 90px;
