--- a/4-Flask/06-number_game/templates/yes.html
+++ b/4-Flask/06-number_game/templates/yes.html
@@ -16,7 +16,8 @@
                 margin-left: 90px;
             }
             button{
-                margin-left: 90px;
+                display: block;
+                margin: auto;
             }
             #result{
                 background-color: green;
